keycloak-postgres/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak-pg
  labels:
    istio-injection: enabled
