keycloak-postgres/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: keycloak-pg
spec:
  selector:
    app: istio-gateway
  servers:
  - port:
      number: 5432
      name: keycloak-postgres
      protocol: TCP
    hosts:
    - "*"
---
