keycloak-postgres/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: virtualservice
  namespace: keycloak-pg
spec:
  hosts:
  - "*"
  gateways:
    - gateway
  tcp:
  - match:
    - port: 5432
    route:
    - destination:
        host: keycloak-db-rw.keycloak-pg.svc.cluster.local
        port:
          number: 5432
